--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
     <h1> p.mahesh reddy </h1>
     <p> 22E11A05G2 </p>
     <P> BIET </P>
+    <hr>
+    <h1>html-headding</h1>
+    <h2>paragraph</h2>
+    <h3>formatting</h3>
+    <h4><img src="./assests/img1.jpg" width="100%" height="500"/></h4>
+    <h5>comment-comment syntax<!----></h5>
+    <hr>
+    <h1>nature display</h1>
+    <!--display the image-->
 </body>
 </html>
