--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <p> 22E11A05G2 </p>
     <P> BIET </P>
     <hr>
-    <h1>html-headding</h1>
+    <h1>NATURE</h1>
     <h2>paragraph</h2>
     <h3>formatting</h3>
-    <h4><img src="./assests/img1.jpg" width="100%" height="500"/></h4>
+    <h4><img src="./assests/img1.jpg" width="300" height="500"/></h4>
     <h5>comment-comment syntax<!----></h5>
     <hr>
-    <h1>nature display</h1>
+     <h1>nature display</h1>
+    <h6><img src="./assests/img1.jpg" width="300" height="300"></h6>
     <!--display the image-->
 </body>
 </html>
