--- a/index.html
+++ b/index.html
@@ -19,5 +19,12 @@
      <h1>nature display</h1>
     <h6><img src="./assests/img1.jpg" width="300" height="300"></h6>
     <!--display the image-->
+    <ul type="1">
+        <li><h7>NATURE</h7><img src="./assests/img1.jpg" width="200" height="200"><P>"Nature" refers to the physical world and everything in it, including life, plants, animals, landscapes, and natural phenomena like weather and the universe as a whole. It can also refer to the inherent character of something or the British weekly scientific journal, Nature. </P></li>
+        <li><h8>EARTH</h8><img src="./assests/img2.jpg" width="200" height="200"><p>Earth is the third planet from the Sun and the only astronomical object known to harbor life. This is enabled by Earth being an ocean world, the only one in the Solar System sustaining liquid surface water. Almost all of Earth's water is contained in its global ocean, covering 70.8% of Earth's crust. The remaining 29.2% of Earth's crust is land, most of which is located in the form of continental landmasses within Earth's land hemisphere.</p></li>
+    </ul>
+    <ol type="i">
+        <li><h7>NATURE</h7><img src="./assests/img1.jpg" width="200" height="200"><P>"Nature" refers to the physical world and everything in it, including life, plants, animals, landscapes, and natural phenomena like weather and the universe as a whole. It can also refer to the inherent character of something or the British weekly scientific journal, Nature. </P></li>
+    </ol>
 </body>
 </html>
