--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
     <ol type="i">
         <li><h7>NATURE</h7><img src="./assests/img1.jpg" width="200" height="200"><P>"Nature" refers to the physical world and everything in it, including life, plants, animals, landscapes, and natural phenomena like weather and the universe as a whole. It can also refer to the inherent character of something or the British weekly scientific journal, Nature. </P></li>
     </ol>
+    <div style="height: 100px;background-color: brown;width: 100px;"></div>
+    <div style="height: 100px;background-color: aqua;width: 100px;"></div>
 </body>
 </html>
