--- a/index.html
+++ b/index.html
@@ -28,5 +28,24 @@
     </ol>
     <div style="height: 100px;background-color: brown;width: 100px;"></div>
     <div style="height: 100px;background-color: aqua;width: 100px;"></div>
+    <!-- table tags <table><th><tr><td>-->
+        <table border="1">
+            <tr>
+                <th>SNO</th>
+                <th>Photo</th>
+                <th>Discription</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td><img src="./assests/img1.jpg" width="100px" height="100px"></td>
+                <td><p>Nature refers to the physical world, its laws, and all phenomena not made by humans, encompassing everything from the atmosphere and land to plants and animals. It provides essential resources like food and air, and its beauty can be seen in everything from landscapes to wildlife.</p></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td><img src="./assests/img2.jpg" width="100px" height="100px"></td>
+                <td><p>Earth is the third planet from the Sun and the only astronomical object known to harbor life. This is enabled by Earth being an ocean world, the only one in the Solar System sustaining liquid surface water. Almost all of Earth's water is contained in its global ocean, covering 70.8% of Earth's crust. The remaining 29.2% of Earth's crust is land, most of which is located in the form of continental landmasses within Earth's land hemisphere.</p></td>
+            </tr>
+        </table>
 </body>
 </html>
