--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <div style="height: 100px;background-color: aqua;width: 100px;"></div>
     <hr>
     <!-- table tags <table><th><tr><td>-->
+        <h1>TABLE</h1>
         <table border="1">
             <tr>
                 <th>SNO</th>
@@ -53,6 +54,7 @@
                 <td><p>Earth is the third planet from the Sun and the only astronomical object known to harbor life. This is enabled by Earth being an ocean world, the only one in the Solar System sustaining liquid surface water. Almost all of Earth's water is contained in its global ocean, covering 70.8% of Earth's crust. The remaining 29.2% of Earth's crust is land, most of which is located in the form of continental landmasses within Earth's land hemisphere.</p></td>
             </tr>
         </table>
+        <h1>LINKS</h1>
         <a href="./about.html">goto about page </a><br><br>
         <a href="./home.html">goto home page</a><br><br>
 </body>
