--- a/index.html
+++ b/index.html
@@ -57,5 +57,6 @@
         <h1>LINKS</h1>
         <a href="./about.html">goto about page </a><br><br>
         <a href="./home.html">goto home page</a><br><br>
+        <a href="./media,html">goto media</a><br><br>
 </body>
 </html>
