--- a/about.html
+++ b/about.html
@@ -8,5 +8,6 @@
 <body>
     <a href="./about.html"><img src="./assests/img1.jpg" width="100px" height="100px"><p>Nature refers to the physical world, its laws, and all phenomena not made by humans, encompassing everything from the atmosphere and land to plants and animals. It provides essential resources like food and air, and its beauty can be seen in everything from landscapes to wildlife.</p></a><br><br>
     <a href="./home.html">goto home page</a><br><br>
+    <a href="./index.html">goto main page</a><br><br>
 </body>
 </html>
