--- a/media.html
+++ b/media.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <audio src="./assests/song 1.mp3" controls
-    autoplay muted loop></audio>
+    autoplay ></audio>
     <video src="./assests/videoplayback.mp4" controls
-    autoplay muted loop></video>
+    autoplay ></video>
 </body>
 </html>
