--- a/media.html
+++ b/media.html
@@ -6,9 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <audio src="./assests/song 1.mp3" controls
-    autoplay ></audio>
-    <video src="./assests/videoplayback.mp4" controls
-    autoplay ></video>
+    <audio src="./assests/song 1.mp3" controls ></audio>
+    <video src="./assests/videoplayback.mp4" controls ></video>
 </body>
 </html>
