--- a/media.html
+++ b/media.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <audio src="./assests/song 1.mp3" controls ></audio>
-    <video src="./assests/videoplayback.mp4" controls ></video>
+    <audio src="./assests/song 1.mp3"></audio>
+    <video src="./assests/videoplayback.mp4"></video>
 </body>
 </html>
