--- a/media.html
+++ b/media.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <audio src="./assests/song 1.mp3"></audio>
-    <video src="./assests/videoplayback.mp4"></video>
+    <audio src="./assests/song 1.mp3" controls
+    autoplay loop muted loop></audio>
+    <video src="./assests/videoplayback.mp4" controls
+    autoplay loop muted loop></video>
 </body>
 </html>
