--- a/index.html
+++ b/index.html
@@ -58,5 +58,6 @@
         <a href="./about.html">goto about page </a><br><br>
         <a href="./home.html">goto home page</a><br><br>
         <a href="./media.html">goto media </a><br><br>
+        <a href="./shopping/shopping.html">goto shopping</a><br><br>
 </body>
 </html>
