--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
         <a href="./home.html">goto home page</a><br><br>
         <a href="./media.html">goto media </a><br><br>
         <a href="./shopping/shopping.html">goto shopping</a><br><br>
+        <a href="./layout/assets/layout.html">goto layout </a><br><br>
 </body>
 </html>
