--- a/index.html
+++ b/index.html
@@ -60,5 +60,6 @@
         <a href="./media.html">goto media </a><br><br>
         <a href="./shopping/shopping.html">goto shopping</a><br><br>
         <a href="./layout/assets/layout.html">goto layout </a><br><br>
+        <a href="./css layout/css.html">goto layout </a><br><br>
 </body>
 </html>
