--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
         <a href="./shopping/shopping.html">goto shopping</a><br><br>
         <a href="./layout/assets/layout.html">goto layout </a><br><br>
         <a href="./css layout/css.html">goto CSS PAGE </a><br><br>
+        <a href="./JS Class/js.html">goto JS PAGE </a><br><br>
 </body>
 </html>
